--- a/apps/lambda-functions/package.json
+++ b/apps/lambda-functions/package.json
@@ -32,7 +32,9 @@
     "typescript": "^5.1.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "express": "^4.21.2",
+    "cors": "^2.8.5"
   },
   "keywords": [],
   "author": "",
