--- a/apps/web/.prettierrc
+++ b/apps/web/.prettierrc
@@ -1,9 +1,14 @@
 {
-  "printWidth": 100,
+  "printWidth": 80,
   "tabWidth": 2,
-  "singleQuote": true,
-  "trailingComma": "all",
   "useTabs": false,
   "semi": true,
-  "arrowParens": "always"
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "proseWrap": "preserve",
+  "quoteProps": "as-needed",
+  "htmlWhitespaceSensitivity": "css"
 }
