--- a/apps/lambda-functions/package.json
+++ b/apps/lambda-functions/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "firebase-admin": "^13.0.2",
-    "@aws-sdk/client-secrets-manager": "^3.731.0"
+    "@aws-sdk/client-secrets-manager": "^3.731.0",
+    "openai": "^4.80.1",
+    "axios": "1.7.9"
   },
   "devDependencies": {
     "aws-sdk": "^2.1692.0",
