--- a/apps/lambda-functions/src/lf-chatgpt-player/package.json
+++ b/apps/lambda-functions/src/lf-chatgpt-player/package.json
@@ -5,8 +5,8 @@
   "main": "./src/index.ts",
   "type": "commonjs",
   "scripts": {
-    "build:dev": "../../node_modules/.bin/webpack --mode development --devtool true --watch",
-    "build": "../../node_modules/.bin/webpack --mode production --devtool false",
+    "build:dev": "../../node_modules/.bin/webpack --mode development --watch",
+    "build": "../../node_modules/.bin/webpack --mode production",
     "dev": "node app.js ./dist/bundle.js .env",
     "zip": "./scripts/zip-lambda.sh",
     "publish-aws-lambda": "./scripts/publish-awa-lambda-function.sh"
