--- a/.github/workflows/lambda-f2-dev-branches.yml
+++ b/.github/workflows/lambda-f2-dev-branches.yml
@@ -1,13 +1,13 @@
 # This workflow will build and deploy a static webapp to Netlify
-name: DEV Build and Deploy Lambda Function 1 pair support service dev
+name: DEV Build and Deploy Lambda Function 2 chatgpt player service dev
 
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches-ignore: ["main",'release-*','chatgpt-support'] # Skip if branch is main or release-webapp-*
+    branches-ignore: ["main",'release-*'] # Skip if branch is main or release-webapp-*
     paths:
-      - 'apps/lambda-functions/src/lf-pair-support-service-lambda/**'
-      - '.github/workflows/lambda-f1-dev-branches.yml'
+      - 'apps/lambda-functions/src/lf-chatgpt-player/**'
+      - '.github/workflows/lambda-f2-dev-branches.yml'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,7 +21,7 @@ permissions:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "dev-lambda-fn1"
+  group: "dev-lambda-fn2"
   cancel-in-progress: false
 
 jobs:
@@ -52,23 +52,30 @@ jobs:
       - name: Install dependencies
         run: yarn install
       - name: Upsert AWS lambda
-        run: yarn run lambda:fn1:publish
+        run: yarn run lambda:fn2:publish
         env:
           ENV_VAR2: ${{ secrets.ENV_VAR2_DEV }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          FUNCTION_NAME: ${{ vars.FUNCTION_NAME_DEV_1 }}
+          FUNCTION_NAME: ${{ vars.FUNCTION_NAME_DEV_2 }}
           RULE_NAME: ${{ vars.RULE_NAME_DEV }}
           LAYER_NAME: ${{ vars.LAYER_NAME_DEV }}
           ROLE_NAME: ${{ vars.ROLE_NAME }}
           SECRET_NAME: ${{ vars.SECRET_NAME }}
+          SECRET_NAME_OPENAI_API_KEY: ${{ vars.SECRET_NAME_OPENAI_API_KEY }}
           ENV_VAR3: ${{ vars.ENV_VAR3_DEV }}
           ENV_VAR1: ${{ vars.FIREBASE_PROJECT_ID_DEV }}
           ZIP_FILE: "lambda.zip"
           BUNDLE_FILE: "dist/bundle.js"
           HANDLER: "dist/bundle.handler"
+          HTTP_METHOD: "GET"
+          RESOURCE_PATH: "/give-your-move"
+          API_NAME: ${{ vars.API_NAME_DEV }}
+          ENV_VAR4: ${{ vars.API_NAME_DEV }}
+          ENV_TYPE: "dev"
+          ALLOWED_ORIGIN: ${{ vars.ALLOWED_ORIGIN_DEV }}
 
 
 
