--- a/.github/workflows/webapp-dev-branches.yml
+++ b/.github/workflows/webapp-dev-branches.yml
@@ -51,6 +51,7 @@ jobs:
           FIREBASE_CONFIG_AUTH_DOMAIN: ${{ vars.FIREBASE_CONFIG_AUTH_DOMAIN_DEV }}
           FIREBASE_CONFIG_MESSAGING_SENDER_ID: ${{ vars.FIREBASE_CONFIG_MESSAGING_SENDER_ID_DEV }}
           FIREBASE_CONFIG_MEASUREMENT_ID: ${{ vars.FIREBASE_CONFIG_MEASUREMENT_ID_DEV }}
+          LAMBDA_CHATGPT_PLAYER_API_URL: ${{ vars.LAMBDA_CHATGPT_PLAYER_API_URL_DEV }}
         run: yarn run webapp:build
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
