--- a/.github/workflows/webapp-main-branch.yml
+++ b/.github/workflows/webapp-main-branch.yml
@@ -49,6 +49,7 @@ jobs:
           FIREBASE_CONFIG_AUTH_DOMAIN: ${{ vars.FIREBASE_CONFIG_AUTH_DOMAIN_QA }}
           FIREBASE_CONFIG_MESSAGING_SENDER_ID: ${{ vars.FIREBASE_CONFIG_MESSAGING_SENDER_ID_QA }}
           FIREBASE_CONFIG_MEASUREMENT_ID: ${{ vars.FIREBASE_CONFIG_MEASUREMENT_ID_QA }}
+          LAMBDA_CHATGPT_PLAYER_API_URL: ${{ vars.LAMBDA_CHATGPT_PLAYER_API_URL_QA }}
         run: yarn run webapp:build
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
