--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "webapp:build:dev": "cd apps/web && yarn run build:dev",
     "webapp:publish": "cd apps/web && yarn run netlify:publish",
     "lambda:layer:publish": "cd apps/lambda-functions && yarn run upsert-aws-layer",
-    "lambda:fn1:publish": "cd apps/lambda-functions/src/lf-pair-support-service-lambda && yarn run publish-aws-lambda"
+    "lambda:fn1:publish": "cd apps/lambda-functions/src/lf-pair-support-service-lambda && yarn run publish-aws-lambda",
+    "lambda:fn2:publish": "cd apps/lambda-functions/src/lf-chatgpt-player && yarn run publish-aws-lambda"
   },
   "devDependencies": {
     "lerna": "^8.1.9"
