--- a/apps/lambda-functions/package.json
+++ b/apps/lambda-functions/package.json
@@ -38,7 +38,8 @@
     "webpack-cli": "^6.0.1",
     "webpack-node-externals": "^3.0.0",
     "express": "^4.21.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "node-hmr": "^1.4.0"
   },
   "keywords": [],
   "author": "",
