--- a/apps/lambda-functions/package.json
+++ b/apps/lambda-functions/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "firebase-admin": "^13.0.2",
-    "@aws-sdk/client-secrets-manager": "^3.731.0"
+    "@aws-sdk/client-secrets-manager": "^3.731.0",
+    "openai": "^4.80.1",
+    "axios": "1.7.9",
+    "aws-lambda": "^1.0.7"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.0",
     "aws-sdk": "^2.1692.0",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
@@ -32,7 +36,10 @@
     "typescript": "^5.1.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "express": "^4.21.2",
+    "cors": "^2.8.5",
+    "node-hmr": "^1.4.0"
   },
   "keywords": [],
   "author": "",
